--- a/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
+++ b/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ActionCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ActionCell" id="KGk-i7-Jjw" customClass="ActionCell" customModule="notritionVendorsAPP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="501" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,11 +20,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Das-cp-Snj">
-                        <rect key="frame" x="0.0" y="0.0" width="501" height="43.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="501" height="33"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2e-sq-fc2">
-                                <rect key="frame" x="0.0" y="0.0" width="250.5" height="43.5"/>
-                                <color key="backgroundColor" red="0.31057380494435821" green="0.77241824435006701" blue="0.93205014556584054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="0.0" y="0.0" width="250.5" height="33"/>
+                                <color key="backgroundColor" red="0.93205014556584054" green="0.59336709901643381" blue="0.14456778072336396" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="yEh-ti-kcS"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="View more in shop">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,7 +35,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEi-CX-Izn">
-                                <rect key="frame" x="250.5" y="0.0" width="250.5" height="43.5"/>
+                                <rect key="frame" x="250.5" y="0.0" width="250.5" height="33"/>
                                 <color key="backgroundColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Delivery">
@@ -40,6 +43,9 @@
                                 </state>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="bEi-CX-Izn" firstAttribute="height" secondItem="s2e-sq-fc2" secondAttribute="height" id="IfE-CM-xod"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
