--- a/notritionVendorsAPP/View/Base.lproj/LaunchScreen.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/LaunchScreen.storyboard
@@ -28,7 +28,7 @@
                                             <constraint firstAttribute="width" constant="250" id="2Xv-uO-89b"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make Your Life is Easier" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEE-G2-A6c">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make Your Life Easier" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEE-G2-A6c">
                                         <rect key="frame" x="0.0" y="200" width="250" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="i0C-Nh-JOg"/>
